--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+all_deaths_19.RData
+all_guns_19.RData
+CDC_parser_19.R
+full_data_19.csv
+gun_deaths_19.RData
+suicide_19.RData
+VS19MORT.DUSMCPUB_r20201216
